# agent-sim-env

./: .env.example  .gitignore  .python-version  DOCUMENTATION.md  Dockerfile  Makefile  PROJECT_SUMMARY.md  PR_SUMMARY.md  README.md  advisor.py  cli.py  k8s-deployment.yaml  main.py  models.py  protocol.py  pytest.ini  requirements.txt  sdk.py  utilities.py  visualization.py  web_interface.py  worker.py
.github/workflows/: CI.yaml
Core-Engine/: protocol.py  utilities.py
Data & Analysis/: benchmarking.py  database.py
Documentation/: example_notebook.ipynb
agent-sim/: README.md  pyproject.toml
agent-sim/configs/: baseline.yaml  stress_large.yaml  stress_small.yaml
agent-sim/reports/: README.md
agent-sim/scripts/: plot_metrics.py  run_batch.py  run_once.py
agent-sim/sim/: __init__.py  evaluation.py  policies.py  recording.py
agent-sim/tests/: test_policies.py  test_protocol.py  test_utilities.py
data/: cache.pkl
examples/: scenarios.yaml
negotiation-simulator/: .gitignore  DOCUMENTATION.md  Makefile  PROJECT_SUMMARY.md  PR_SUMMARY.md  advanced_strategies.py  api.py  auth.py  config.py  docker-compose.yml  models.py  protocol.py  requirements.txt  sample_config.yaml  sdk.py  setup.py  utilities.py
negotiation-simulator/.github/workflows/: CI.yaml
negotiation-simulator/notebooks/: example_notebook.ipynb
negotiation-simulator/tests/: test_negotiation.py
negotiation_simulator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_negotiation.py
tests/performance/: test_batch.py
