[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-sim"
version = "0.1.0"
description = "Simple alternating-offers negotiation simulator"
authors = [
  { name = "Your Name" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
packages = ["sim"]
package-dir = {"" = "sim"}

